@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.5755 2006/12/09 14:07:25 obache Exp $
+$NetBSD: TODO,v 1.5756 2006/12/09 16:20:57 adam Exp $
 
 Suggested new packages
 ======================
@@ -870,7 +870,6 @@ Suggested package updates
 	o poppy-4.01
 	o poptop-1.3.0
 	o posh-0.4.3
-	o postgresql-8.2
 	o postgresql81-postgis-1.1.6
 	o postgresql_autodoc-1.25
 	o postgrey-1.27
